--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -4,6 +4,48 @@
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
         <script>
+          //Random integer function to help determine computer choice in getComputerChoice
+          function getRndInteger(min, max) {
+            return Math.floor(Math.random() * (max - min) ) + min;
+          }
+
+          //Prompts the player for choice input, checks for valid input
+          function getPlayerChoice() {
+            do{
+              var playerChoice = prompt("Rock, Paper, or Scissors?", "Rock");
+              playerChoice = playerChoice.toLowerCase();
+              if(playerChoice != "rock" && playerChoice != "paper" && playerChoice != "scissors") {
+                window.alert("Only input 'rock', 'paper', or 'scissors'!")
+              }
+            } while (playerChoice != "rock" && playerChoice != "paper" && playerChoice != "scissors")
+          }
+
+          //Returns computer choice, which is determined by a random number from 1-3
+          function getComputerChoice(){
+            var computerChoice = getRndInteger(1,4);
+            if(computerChoice === 1) {
+              return "ROCK";
+            }
+
+            if(computerChoice === 2) {
+              return "PAPER";
+            }
+
+            if(computerChoice === 3) {
+              return "SCISSORS";
+            }
+
+            if(computerChoice < 1 || computerChoice > 3) {
+              return "Computer is cheating!";
+            }
+           }
+
+           function playRound( playerSelection, computerSelection ) {
+
+           }
+
+
+
 
         </script>
     </head>
